--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -11,17 +11,15 @@
         
         <h2 class="title">LOGIN</h2>
         <form class="form" action="/login" method="post">
-            <div class="input-field"></div>
-                <input type="text" name="username" id="username" placeholder="Seu e-mail">
-            <div class="underline"></div>
-            </div>
-            <div class="input-field"></div>
-            <input type="password" name="password" id="password" placeholder="Sua senha">
-            <div class="underline"></div>
-            </div>
+            <label class="label-input">
+                <input type="email" placeholder="E-mail">
+            </label>
+            <label class="label-input">
+                <input type="password" placeholder="Senha">
+            </label>
             <button class="entrar" type="submit">ENTRAR</button>
         </form>
-        <div class="ou">
+        <div class="">
             <p>Ou</p>
         </div>
         <div class="cadastro">
