--- a/public/css/login.css
+++ b/public/css/login.css
@@ -31,33 +31,31 @@ main.container {
     font-weight: 900;
 }
 
-form{
+.form {
     display: flex;
-    flex-direction: column;
+    flex-direction: column; /** Mantem os elementos do formulário um abaixo do outro **/
+    width: 30%;
+    margin: 8px;
+}
+
+.form input {
+    height: 45px;
+    border: none;
+    background-color: #ecf0f1;
+    width: 100%;
+}
+
+.label-input {
+    background-color: #ecf0f1;
+    display: flex;
+    align-items: center;
+    margin: 8px;
 }
 
 .ou{
     margin-top: 30px;
     margin-bottom: 30px;
     justify-content: center;
-}
-input#username {
-    border-color: #0066cc;
-    border-radius: 4px;
-    padding-top: 5px;
-    padding-left: 5px;
-    margin-top: 40px;
-    background-color: white;
-    cursor: text;
-}
-input#password {
-    border-color: #0066cc;
-    border-radius: 4px;
-    padding-top: 5px;
-    padding-left: 5px;
-    margin-top: 10px;
-    background-color: white;
-    cursor: text;
 }
 
 .cadastro{
