--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/css/login.css">
 
 <body>
-    <main class="container">
+    <div class="container">
         
         <% if (locals.error) { %>
             <%= locals.error %>
@@ -27,7 +27,7 @@
                 <i class="fas fa-user-check"></i>
             </a>
         </div>
-    </main>
+    </div>
 </body>
 
 <%- include('partials/footer')%>
