--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -17,13 +17,10 @@
             <label class="label-input">
                 <input type="password" placeholder="Senha">
             </label>
-            <button class="entrar" type="submit">ENTRAR</button>
+            <button class="btn" type="submit">ENTRAR</button>
         </form>
-        <div class="">
-            <p>Ou</p>
-        </div>
         <div class="cadastro">
-            <a href="http://localhost:3000/cadastro">Cadastre-se agora!
+            <a href="http://localhost:3000/cadastro">Ou cadastre-se agora!
                 <i class="fas fa-user-check"></i>
             </a>
         </div>
