--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -4,127 +4,56 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
 }
 
-
-.titulo {
-    text-align: center;
+body {
+    font-family: 'Lato', sans-serif;
 }
 
-main{
-    
-    border: 0;
-    padding: 0;
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #fff;
     box-sizing: border-box;
-    min-height: 100vh;
-    min-width: 100vw; 
+    flex-direction: column;
+    color:#0066cc;
+}
+
+.title {
+    font-weight: 900;
+}
+
+.form {
+    display: flex;
+    flex-direction: column; /** Mantem os elementos do formulário um abaixo do outro **/
+    width: 30%;
+    margin: 8px;
+}
+
+.form input {
+    height: 45px;
+    border: none;
+    background-color: #ecf0f1;
+    width: 100%;
+}
+
+.label-input {
+    background-color: #ecf0f1;
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100px;
+    margin: 8px;
 }
 
-main.container {
-    max-width: 350px;
-    min-height: 70vh;
-    padding: 2rem;
-}
-
-form{
-    display: flex;
-    flex-direction: column;
-}
-
-.ou{
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-
-input#name {
-    border-color: #0066cc;
-    border-radius: 4px;
-    padding-top: 5px;
-    padding-left: 5px;
-    margin-top: 40px;
-    cursor: text;
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-input#email {
-    border-color: #0066cc;
-    border-radius: 4px;
-    padding-top: 5px;
-    padding-left: 5px;
-    margin-top: 10px;
-    cursor: text;
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-input#condominio {
-    border-color: #0066cc;
-    border-radius: 4px;
-    padding-top: 5px;
-    padding-left: 5px;
-    margin-top: 10px;
-    cursor: text;
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-input#unidade{
-    border-color: #0066cc;
-    border-radius: 4px;
-    padding-top: 5px;
-    padding-left: 5px;
-    margin-top: 10px;
-   
-    cursor: text;
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-input#senha{
-    border-color: #0066cc;
-    border-radius: 4px;
-    padding-top: 5px;
-    padding-left: 5px;
-    margin-top: 10px;
-   cursor: text;
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-form input{
-    margin: 0.4rem;
-    padding: 0.4rem;
-    border-radius: 4px;
-    
-    
-    cursor: pointer;
-}
-
-form input:hover{
-    letter-spacing: 0.5px;
-}
 
 .cadastro{
     color: #0066cc ;
-    
 }
 
-.botao {
-    background-color: #0066cc;
-    border: 1px solid #0066cc;
+.btn {
     border-radius: 15px;
+    text-transform: uppercase;
     color: #fff;
     font-size: 10px;
     padding: 10px 50px;
@@ -132,13 +61,12 @@ form input:hover{
     font-weight: bold;
     width: 150px;
     align-self: center;
-    border: none;
     margin-top: 1rem;
+    background-color: #0066cc;
+    border: 1px solid #0066cc;
 }
 
-
-.botao:hover {
+.btn:hover {
     background-color: #fff;
-    border: 1px solid #0066cc;
     color: #0066cc;
 }
