--- a/src/views/cadastro.ejs
+++ b/src/views/cadastro.ejs
@@ -24,9 +24,9 @@
             </label>
             <button class="btn" type="submit">CADASTRAR</button>
         </form>
-    </div>
-    <div class="cadastro">
-         <p><a href="http://localhost:3000/cadastro">Clique aqui para entrar!<i class="fas fa-user-check"></i></a></p>
+        <div class="login">
+            <p><a href="http://localhost:3000/login">Clique aqui para entrar!</a></p>
+        </div>
     </div>
 </body>
 
