--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -20,9 +20,7 @@
             <button class="btn" type="submit">ENTRAR</button>
         </form>
         <div class="cadastro">
-            <a href="http://localhost:3000/cadastro">Ou cadastre-se agora!
-                <i class="fas fa-user-check"></i>
-            </a>
+            <p><a href="http://localhost:3000/cadastro">Clique aqui para se cadastrar!</a></p>
         </div>
     </div>
 </body>
