--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -14,11 +14,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-color: #fff;
     box-sizing: border-box;
     flex-direction: column;
     color:#0066cc;
+    padding-top: 50px;
 }
 
 .title {
@@ -46,11 +46,6 @@ body {
     margin: 8px;
 }
 
-
-.cadastro{
-    color: #0066cc ;
-}
-
 .btn {
     border-radius: 15px;
     text-transform: uppercase;
@@ -69,4 +64,12 @@ body {
 .btn:hover {
     background-color: #fff;
     color: #0066cc;
+}
+
+.login {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    justify-content: center;
+    color: #0066cc;
+    font: 12pt;
 }
