login ejs erros corrigidos

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -12,10 +12,10 @@
         <h2 class="title">LOGIN</h2>
         <form class="form" action="/login" method="post">
             <label class="label-input">
-                <input type="email" placeholder="E-mail">
+                <input type="text" name="username" id="username" placeholder="Seu E-mail">
             </label>
             <label class="label-input">
-                <input type="password" placeholder="Senha">
+                <input type="password" name="password" id="password" placeholder="Sua Senha">
             </label>
             <button class="btn" type="submit">ENTRAR</button>
         </form>
