--- a/src/views/QuemSomos.ejs
+++ b/src/views/QuemSomos.ejs
@@ -1,12 +1,13 @@
 <%- include('partials/head')%> 
 <%- include('partials/header')%> 
 <link rel="stylesheet" href="/css/quemSomos.css">
+<body>
 
-    <body>
 
   <main>
+    <div>
       <h1>  QUEM SOMOS  </h1>
-
+</div>
 
       <P>O ApeGo nasceu em 2021 com o propósito de ajudar moradores de condomínio a ficarem por dentro das novidades e mudanças que acontecem na comunidade!</P>
 
@@ -22,12 +23,12 @@
           PERFIL
         </p>
     </div>
-    <div class="item">
+    <!-- <div class="item">
         <img src="/img/iconechat.jpg "alt="Admin" width="120px" height="120px">
         <p>
           CHAT
         </p>
-    </div>
+    </div> -->
     <div class="item">
 
       
@@ -48,12 +49,12 @@
           BOLETOS
         </p>
     </div>
-    <div class="item">
+    <!-- <div class="item">
         <img src="/img/iconereservas.jpg" alt="Admin" width="120px" height="120px">
         <p>
           RESERVAS
         </p>
-    </div>
+    </div> --> 
     <div class="item">
         <img src="/img/iconecontas.jpg" alt="View" width="120px" height="120px">
         <p>
