--- a/public/css/quemSomos.css
+++ b/public/css/quemSomos.css
@@ -7,12 +7,18 @@
   font-family: 'Lato', sans-serif;
 }
 
+body {
+  /*font-weight: 600;*/
+ 
+  font-family: 'Lato', sans-serif;
+}
+
 main{
     margin: 0;
     border: 0;
     padding: 0;
     max-width: 100%;
-      color:#0066cc ;
+   color:#0066cc ;
     
   
 }
@@ -48,10 +54,11 @@ p{
   section{
     max-width: 100%;
     height: 100%;
-     color: #0066cc;
+     
     display: flex;
     flex-wrap: nowrap;
      flex-direction: row;
     justify-content: space-around;
   }
 
+ 
