--- a/src/views/QuemSomos.ejs
+++ b/src/views/QuemSomos.ejs
@@ -5,14 +5,16 @@
 
 
   <main>
-    <div>
-      <h1>  QUEM SOMOS  </h1>
-</div>
-
+    <div class="logo">
+      <img src="/img/logo-apego.png" alt="" width="90px" height="90px">
+      <h2>QUEM SOMOS </h2>
       <P>O ApeGo nasceu em 2021 com o propósito de ajudar moradores de condomínio a ficarem por dentro das novidades e mudanças que acontecem na comunidade!</P>
+  </div>
 
 
-      <h1>SERVIÇOS </h1>
+      
+
+      <h2>SERVIÇOS </h2>
       
       <section>
       <div class="item">
