--- a/src/views/contas.ejs
+++ b/src/views/contas.ejs
@@ -21,20 +21,17 @@
 
 <body>
 
-
-
     <div class="logo">
-        <img src="/img/iconecontas.jpg" alt="" width="150px" height="150px">
-
-
+        <img src="/img/iconecontas.jpg" alt="" width="100px" height="100px">
+        <h5>DEMOSNTRATIVO DESPESAS</h5>
     </div>
 
-    <h5>DEMOSNTRATIVO DESPESAS </h5>
 
     <div class="container">
         <table class="custom-table">
             <thead>
                 <tr>
+                    <th> </th>
                     <th>JANEIRO</th>
                     <th>FEVEREIRO</th>
                     <th>MARCO</th>
@@ -58,8 +55,8 @@
                     </td>
                 </tr>
 
-                <tr class="toggler toggler1">
-                    <td rowspan="4"></td>
+                <tr class="toggler1">
+                   
                     <td>SALARIO </td>
                     <td>11.242,76</td>
                     <td>11.775,29</td>
@@ -76,7 +73,7 @@
                 </tr>
 
 
-                <tr class="toggler toggler1">
+                <tr class="toggler1">
                     <td>FERIAS</td>
                     <td>3.306,63</td>
                     <td>0,00</td>
@@ -93,7 +90,7 @@
 
                 </tr>
 
-                <tr class="toggler toggler1">
+                <tr class="toggler1">
                     <td>VALE TRANSPORTE</td>
                     <td>600,33</td>
                     <td>774,24</td>
@@ -111,7 +108,7 @@
                 </tr>
 
 
-                <tr class="toggler toggler1">
+                <tr class=" toggler1">
                     <td>VALE ALIMENTAÇÃO</td>
                     <td>2.102,52</td>
                     <td>2.102,52</td>
@@ -131,9 +128,9 @@
             <tbody>
                 <td colspan="20" class="page-header"><button type="button" class="tbtn"><i
                             class="fa fa-plus-circle"></i> ENCARGOS SOCIAIS </button></td>
-                </tr>
+                
                 <tr class="toggler">
-                    <td rowspan="3"></td>
+                    
                     <td>INSS</td>
                     <td>8.074,45</td>
                     <td>8.074,45</td>
@@ -190,9 +187,9 @@
             <tbody>
                 <td colspan="20" class="page-header"><button type="button" class="tbtn"><i
                             class="fa fa-plus-circle"></i> CONSUMO </button></td>
-                </tr>
+                
                 <tr class="toggler">
-                    <td rowspan="3"></td>
+                   
                     <td>ENERGIA ELETRICA</td>
                     <td>5.954,18</td>
                     <td>5.954,18</td>
@@ -209,6 +206,7 @@
                 </tr>
 
                 <tr class="toggler">
+                   
                     <td>CONSUMO DE ÁGUA</td>
                     <td>7.304,32</td>
                     <td>5.954,18</td>
@@ -223,7 +221,7 @@
                     <td>0,00</td>
                     <td>0,00</td>
                 </tr>
-            </tbody>
+           
 
 
             <tr class="toggler">
@@ -246,7 +244,7 @@
             <tbody>
                 <td colspan="20" class="page-header"><button type="button" class="tbtn"><i
                             class="fa fa-plus-circle"></i> CONTRATOS </button></td>
-                </tr>
+                
 
                 <tr class="toggler">
 
