--- a/public/css/contas.css
+++ b/public/css/contas.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 *{
     margin: 0;
@@ -6,30 +5,25 @@
     box-sizing: border-box;
     
   }
-  
-      div{
-         text-align: center;
-         
-      }
-      
+ .logo {
+    text-align: center;
+    color:#0066cc;
+    padding-bottom: 10px ;
+    
+ 
+    }
 
-      h5{
-          color: #0066cc;
-          font-weight: 900;
-          justify-content: center;
-          text-align: center;
-
-      }
-  
-        
-     
+ 
+body {
+    font-family: 'Lato', sans-serif;
+    }
 
         .custom-table{
-            border-collapse:collapse;
+            
             width:100%;
             border:solid 1px #c0c0c0;
-            font-family:open sans;
             font-size:11px;
+            height: 100%;
         }
        .custom-table td{
             text-align:left;
@@ -44,7 +38,7 @@
             color:#000080;
             
         }
-        .custom-table tr:nth-child(odd){
+        custom-table tr:nth-child(odd){
             background-color:#f7f7ff
         }
         .custom-table>thead>tr{
@@ -52,12 +46,14 @@
         }
         .tbtn{
             border:0;
-            outline:0;
+            
             background-color:transparent;
             font-size:13px;
-            cursor:pointer}
+            cursor:pointer
+        }
         .toggler{display:none
         }
+        
         .toggler1{
             display:table-row;
         }
