--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -2,7 +2,11 @@
 <%- include('partials/header')%> 
 <link rel="stylesheet" href="/css/contato.css">
 <body>
-<h1 class= "titulo">CONTATO</h1>
+    <div class="logo">
+        <img src="/img/iconemural.jpg"  alt="" width="100px" height="100px">
+        <h2>CONTATO </h2>
+        </div>
+
     
 <div class="lista-contatos">
     <h3>Telefone</h2>
