--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -10,17 +10,31 @@
 body {
    font-family: 'Lato', sans-serif;
 }
+.logo {
+   text-align: center;
+   color:#0066cc;
+   padding-bottom: 10px ;
+    border: 30px;
+    align-items: center;
+ }
 
 
-h1{
+    h2{
          
-    color: #0066cc;
-    justify-content: center;
-    margin-bottom: 20px;
-    font-size: 20px;
+      color: #0066cc;
+      justify-content: center;
+      margin-bottom: 20px;
+      font-weight: 900;
+      padding: 10px;
+   
+   }
+   h3{
+      font-weight: 600;
+      font-size: 15px;
+   }
    
  
- }
+ 
 
  div{
     text-align: center;
@@ -31,90 +45,60 @@ h1{
 
 
  .container {
-   
-   justify-content: center;
-   
-   background-color: #fff;
-   box-sizing: border-box;
-   flex-direction: column;
-   color:#0066cc;
-   padding-top: 50px;
-}
-
-
-.form {
-   display: flex;
-   flex-direction: column; /** Mantem os elementos do formulário um abaixo do outro **/
-   width: 30%;
-   margin: 8px;
-}
-
-.form input {
-   height: 45px;
-   border: none;
-   background-color: #ecf0f1;
-   width: 100%;
-}
-
-.label-input {
-   background-color: #ecf0f1;
-   display: flex;
-   align-items: center;
-   margin: 8px;
-}
-/**.container
- {
-padding-top: 30px;
-align-items: center;
 justify-content: center;
-border: 2px solid  #0066cc;
-flex-direction: column;
-height: 500px;
-width: 500px ;
-display: flex;
-padding: 50px;
-margin-left:500px;
+background-color: #fff;
 box-sizing: border-box;
+flex-direction: column;
+color:#0066cc;
+align-items: center;
+height: 800px;
+width: 800px ;
+margin-left:400px;
 margin-bottom: 20px ;
 
 }
-*/
+
+form {
+
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+     
+}
 
 
-/**
-.nome{
- 
-   
-   border :2px solid #0066cc;
-   width: 400px;
-   height: 100px ;
-   margin: 20PX;
-   border-radius: 20PX;
+
+
+ input {
+   height: 45px;
+   border: none;
+   background-color: #e8f0fe;
+   width: 300px;
+   margin:15px ;
+   padding: 5px;
 }
 
 .email{
-    
-    border :2px solid #0066cc;
-    width: 400px;
-    height: 100px ;
-    margin: 20PX;
-    border-radius: 20PX;
- }
+   margin:15px ;
+   background-color:#e8f0fe;
+   width: 300px;
+   height: 45px;
+   text-align: center;
 
-.condominio{
-     
-    border :2px solid #0066cc;
-    width: 400px;
-    height: 100px ;
-    margin: 20PX;
-    border-radius: 20PX;
- }
+}
 
-.unidade{
-   
-    border :2px solid #0066cc;
-    width: 400px;
-    height: 100px ;
-    margin: 20PX;
-    border-radius: 20PX;
- }
+.btn {
+   border-radius: 15px;
+   text-transform: uppercase;
+   color: #fff;
+   font-size: 10px;
+   padding: 10px 50px;
+   cursor: pointer;
+   font-weight: bold;
+   width: 150px;
+   align-self: center;
+   margin-top: 1rem;
+   background-color: #0066cc;
+   border: 1px solid #0066cc;
+}
+
