--- a/src/views/boletos.ejs
+++ b/src/views/boletos.ejs
@@ -5,11 +5,12 @@
 <body>
       <main>
 
-        <div>
-          <img src="/img/iconeboleto.jpg" alt="" width="150px" height="150px">
-          
-          <h1>BOLETOS </h1>
-        </div>
+
+        
+    <div class="logo">
+      <img src="/img/iconeboleto.jpg"  alt="" width="100px" height="100px">
+      <h2>BOLETOS </h2>
+      </div>
 
        
         <section>
