--- a/src/views/mural-de-avisos.ejs
+++ b/src/views/mural-de-avisos.ejs
@@ -3,7 +3,14 @@
  <link rel="stylesheet" href="/css/mural-de-avisos.css">
     
 <body>
-    <h1 class= "titulo">MURAL DE AVISOS</h1>
+
+    <div class="logo">
+        <img src="/img/iconemural.jpg"  alt="" width="100px" height="100px">
+        <h2>MURAL DE AVISOS </h2>
+        </div>
+
+
+    
     
     <div class= "aviso1">
     
