--- a/src/views/perfil.ejs
+++ b/src/views/perfil.ejs
@@ -37,13 +37,16 @@
         <div class="condominio">
       
           <h3>CONDOMINIO</h3>
-           <input value="<%= user.condominio %>" name="condominio" />  
+             
+           <p class="condominio">  "<%= user.condominio %>"  </p> 
+
 
         </div>
       
         <div class="unidade">
           <h3>UNIDADE</h3>
-          <input value="<%= user.unidade %>" name="unidade" /> 
+          
+          <p class="unidade">  "<%= user.unidade %>"  </p> 
           
         </div>
         </form>
@@ -52,6 +55,26 @@
       </div>
     
       </body>
+
+      <footer>
+        <section class="flex-container">
+       <div class="footer-card">
+           <h5>ApeGo - 2021 - Todos os direitos reservados.</h5>
+       </div>
+       
+       <div class="footer-card">
+           <img href="https://facebook.com" src="/img/face-icon-white.svg" width="30px" height="30px" hspace="15px">
+           <img href="https://instagram.com" src="/img/insta-icon-white.svg" width="30px" height="30px" hspace="15px">
+    
+           
+    
+       </div>
+       </section>
+    </footer> 
+    
+    </html>
+    
+    
       
 
 
