--- a/src/views/perfil.ejs
+++ b/src/views/perfil.ejs
@@ -30,7 +30,7 @@
         <div class="email">
       
           <h3>EMAIL</h3>
-          <p class="email">  "<%= user.email %>"  </p> 
+          <p class="email">  <%= user.email %>  </p> 
       
         </div>
       
@@ -38,7 +38,7 @@
       
           <h3>CONDOMINIO</h3>
              
-           <p class="condominio">  "<%= user.condominio %>"  </p> 
+           <p class="condominio">  <%= user.condominio %>  </p> 
 
 
         </div>
@@ -46,7 +46,7 @@
         <div class="unidade">
           <h3>UNIDADE</h3>
           
-          <p class="unidade">  "<%= user.unidade %>"  </p> 
+          <p class="unidade">  <%= user.unidade %> </p> 
           
         </div>
         </form>
