--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ApeGo Seu administrador de condomínio</title>
-    <link rel="stylesheet" href="./css/header2.css">
+    <!-- <link rel="stylesheet" href="./css/header2.css"> -->
     <link rel="shortcut icon" href="./img/favicon.ico"/>
     
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 </html>
 
