--- a/public/css/header2.css
+++ b/public/css/header2.css
@@ -53,3 +53,38 @@ li {
 ul{
   padding-left: 300PX;
 }
+
+@media (max-width: 858px){
+	.checkbtn {
+		display: block;
+	}
+	ul{
+
+		position: fixed;
+		width: 100%;
+		height: 100vh;
+		background: #E6E7E8;
+		top: 80px;
+		left: -100%;
+		text-align: left;
+		transition: all .5s;
+        
+	}
+	.nav-area {
+        display: grid;
+		height: 50%;
+		margin: 50px 0;
+		line-height: 30px;
+	}
+	nav ul li a {
+
+		font-size: 20px;
+	}
+	a:hover, a.active {
+		background: none;
+		color: black;
+	}
+	#check:checked ~ ul {
+		left: 0;
+	}
+}
