--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,8 +1,13 @@
-
 <header>
-    <a href="http://localhost:3000 "><img src="/img/logo.svg" class="logo" /> </a>
-    <ul>
-        <li><a href="/QuemSomos ">QUEM SOMOS</a></li>
+	<nav>
+		<input type="checkbox" id="check">
+		<label for="check" class="checkbtn">
+			<i class="fas fa-bars"></i>
+		</label>
+	<!-- <label class="logo">Minha Logo</label> -->
+        <a href="http://localhost:3000 "><img src="/img/logo.svg" class="logo" /> </a>
+		<ul>
+			<li><a href="/QuemSomos ">QUEM SOMOS</a></li>
         <li><a href="/contato">CONTATO</a></li>
         <% if (locals.isLogged) { %>
             <li><a href="/logout">LOGOUT</a></li>
@@ -10,6 +15,8 @@
                 <li><a href="/login">LOGIN</a></li>
                 <li><a href="/cadastro">CADASTRAR</a></li>
                 <% } %>
-    </ul>
+		</ul>
+	</nav>
 </header>
-<link rel="stylesheet" href="/css/header2.css">
+<link rel="stylesheet" href="/css/header1.css">
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
