--- a/public/css/header1.css
+++ b/public/css/header1.css
@@ -21,6 +21,7 @@ nav {
 	width: 100%;
 	display: flex;
 	justify-content: space-around;
+	min-width: 350px;
 }
 label.logo {
 	color: #0066cc;
@@ -44,6 +45,7 @@ nav ul li a {
 	padding: 7px 13px;
 	border-radius: 3px;
 	text-transform: uppercase;
+	text-decoration: none;
 }
 a.active, a:hover {
 /*	background: #dfdfdf;
