--- a/src/views/QuemSomos.ejs
+++ b/src/views/QuemSomos.ejs
@@ -1,73 +1,71 @@
-<%- include('partials/head')%> 
-<%- include('partials/header')%> 
-<link rel="stylesheet" href="/css/quemSomos.css">
-<body>
+<%- include('partials/head')%>
+  <%- include('partials/header')%>
+    <link rel="stylesheet" href="/css/quemSomos.css">
+
+    <body>
 
 
-  <main>
-    <div class="logo">
-      <img src="/img/logo-apego.png" alt="" width="90px" height="90px">
-      <h2>QUEM SOMOS </h2>
-      <P>O ApeGo nasceu em 2021 com o propósito de ajudar moradores de condomínio a ficarem por dentro das novidades e mudanças que acontecem na comunidade!</P>
-  </div>
+      <main>
+        <div class="titulo-quem-somos">
+          <h2>QUEM SOMOS </h2>
+          <P>O ApeGo nasceu em 2021 com o propósito de ajudar moradores de condomínio a ficarem por dentro das novidades
+            e mudanças que acontecem na comunidade!</P>
+        </div>
 
 
-      
 
-      <h2>SERVIÇOS </h2>
-      
-      <section>
-      <div class="item">
-              
-        <img src="/img/iconeperfil.jpg" alt="Shield" width="120px" height="120px">
-   
-        <p>
-          PERFIL
-        </p>
-    </div>
-    <!-- <div class="item">
+
+        <h2>SERVIÇOS </h2>
+
+        <section>
+          <div class="item">
+
+            <img src="/img/iconeperfil.jpg" alt="Shield" width="120px" height="120px">
+
+            <p>
+              PERFIL
+            </p>
+          </div>
+          <!-- <div class="item">
         <img src="/img/iconechat.jpg "alt="Admin" width="120px" height="120px">
         <p>
           CHAT
         </p>
     </div> -->
-    <div class="item">
-
-      
-       <img src="/img/iconemural.jpg" alt="View" width="120px" height="120px"></a>
-        <p>
-          MURAL DE AVISOS
-        </p>
-    </div>
+          <div class="item">
 
 
-    <div class="item">
+            <img src="/img/iconemural.jpg" alt="View" width="120px" height="120px"></a>
+            <p>
+              MURAL DE AVISOS
+            </p>
+          </div>
 
-      
-      
-        <img src="/img/iconeboleto.jpg" alt="Shield" width="120px" height="120px"></a>
-   
-        <p>
-          BOLETOS
-        </p>
-    </div>
-    <!-- <div class="item">
+
+          <div class="item">
+
+
+
+            <img src="/img/iconeboleto.jpg" alt="Shield" width="120px" height="120px"></a>
+
+            <p>
+              BOLETOS
+            </p>
+          </div>
+          <!-- <div class="item">
         <img src="/img/iconereservas.jpg" alt="Admin" width="120px" height="120px">
         <p>
           RESERVAS
         </p>
-    </div> --> 
-    <div class="item">
-        <img src="/img/iconecontas.jpg" alt="View" width="120px" height="120px">
-        <p>
-          CONTAS
-        </p>
-    </div>
-  </section>
+    </div> -->
+          <div class="item">
+            <img src="/img/iconecontas.jpg" alt="View" width="120px" height="120px">
+            <p>
+              CONTAS
+            </p>
+          </div>
+        </section>
 
-  </main>
-  
-  <%- include('partials/footer')%> 
- 
+      </main>
 
-
+      <%- include('partials/footer')%>
