--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -2,24 +2,23 @@
 <%- include('partials/header')%> 
 <link rel="stylesheet" href="/css/contato.css">
 <body>
-    <div class="logo">
-        <img src="/img/iconemural.jpg"  alt="" width="100px" height="100px">
-        <h2>CONTATO </h2>
+    <div class="main-contato">
+        <div class="logo">
+            <img src="/img/iconemural.jpg"  alt="" width="100px" height="100px">
+            <h2>CONTATO </h2>
         </div>
-
-    
-<div class="lista-contatos">
-    <h3>Telefone</h2>
-    <p>11 4002-8922</p>
-    <br>
-    <h3>Celular/WhatsApp</h2>
-    <p>11 94002-8922</p>
-    <br>
-    <h3>E-mail</h2>
-    <p></p>contato@apego.com</p>
-    <br>
-
-    <h3>Redes Sociais</h3>
-    <p>@apego</p>
-</div>
+        <div class="lista-contatos">
+            <h3>Telefone</h2>
+            <p>11 4002-8922</p>
+            <br>
+            <h3>Celular/WhatsApp</h2>
+            <p>11 94002-8922</p>
+            <br>
+            <h3>E-mail</h2>
+            <p></p>contato@apego.com</p>
+            <br>
+            <h3>Redes Sociais</h3>
+            <p>@apego</p>
+        </div>
+    </div>
 <%- include('partials/footer')%>
